<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SoftPig</string>
    <string name="app_Bienvenida">!Bienvenido a SoftPig¡</string>

    <string name="app_reporteFerti">Reporte de Fertilidad</string>
    <string name="app_reportePro">Reporte de Productiva</string>
    <string name="app_reporteRepro">Reporte de Reproductoras</string>


    <string name="app_codigo">Codigo</string>
    <string name="app_contraseña">Contraseña</string>
    <string name="app_olvidocontraseña">¿Olvidaste la Contraseña?</string>
    <string name="app_iniciar">Iniciar Sesión</string>
    <string name="app_cerrar">Cerrar Sesion</string>
    <string name="app_generarpdf">Generar PDF</string>

    <!--    CAMBIO DE CONTRASEÑA     -->
    <string name="app_recuperar_contraseña">Recuperacion de Contraseña</string>
    <string name="app_cambiarcontraseña">Cambiar Contraseña</string>

    <!--    ACERCA DE, DICCIONARIO, DERECHOS    -->
    <string name="app_acercade">Acerca de</string>
    <string name="app_diccionario_porcino">Diccionario Porcino</string>
    <string name="app_derechos_reservados">Todos los Derechos Reservados 2019</string>

    <string name="app_porcino">Porcino</string>
    <string name="app_agregarporcino">Agregar Porcino</string>

    <string name="app_empleado">Empleado</string>
    <string name="app_agregarempleado">Agregar Empleado</string>

    <string name="app_articulo">Articulos</string>

    <string name="app_instalacion">Instalaciones</string>

    <string name="app_reporte">Reportes</string>

    <string name="diseccion">
        Destrucción de los microorganismos en todos los ambientes o partes en
        los que puedan ser nocivos, usando distintos métodos físicos (por ejemplo, sometiéndolos a
        una temperatura elevada) o químicos (por ejemplo, usando desinfectantes).
    </string>

    <string name="fecundacion">
        Es el proceso por el cual los espermatozoides penetran dentro de los
        óvulos de la hembra, lo que lleva al inicio del desarrollo del embrión. Ocurre en un lugar
        cercano al oviducto, donde espermatozoides y óvulos deben coincidir dentro de un margen de
        tiempo.
    </string>

    <string name="gen">
        Secuencia de ADN que constituye la unidad funcional para la transmisión de los caracteres hereditarios.
    </string>

    <string name="lechon_destetado">
        El lechón lactante pasa a ser lechón destetado cuando es separado definitivamente de su madre.
    </string>

    <string name="ubre">
        Es el conjunto de todas las mamas o tetas de la madre. También se denomina línea mamaria,
        porque las mamas se encuentran alineadas formando los complejos mamarios derecho e izquierdo.
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_refence">refence</string>
    <string name="title_activity_reference">Reference</string>
    <string name="idEmpleado">ID: 01</string>
    <string name="idPig">ID: 01</string>
    <string name="etapaPig">Lechon</string>
    <string name="pesoPig">50 Kg</string>
    <string name="sexoPig">Macho</string>
    <string name="tab_home">Inicio</string>
    <string name="tab_pig">Porcinos</string>
    <string name="tab_medicine">Medicinas</string>
    <string name="tab_alert">Alertas</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_female">Reproductoras</string>
    <string name="menu_male">Reproductor</string>
    <string name="menu_race">Razas</string>
    <string name="menu_reports">Informes</string>
    <string name="menu_dictionary">Diccionario Porcino</string>
    <string name="menu_about">Acerca De</string>
    <string name="menu_out">Cerrar Sesión</string>
    <string name="idInstallation">01</string>
    <string name="name_instalation">Cochera 1</string>
    <string name="type_installation">Partos</string>
    <string name="medidas_installations">500x500</string>
    <string name="nameEmployee">William Pajaro Caballero</string>
    <string name="type_employee">Empleado administrativo</string>
    <string name="nombre_article">Tijeras</string>
    <string name="type_article">Cuidado Porcino</string>
    <string name="totalarticle">10 unidades</string>
    <string name="idAriticle">ID: 01</string>
    <string name="name_race">Duroc</string>
    <string name="description">Pequeña descripcion</string>
    <string name="idRace">ID:01</string>
    <string name="idFemale">ID: 01</string>
    <string name="nulipara"> no</string>
    <string name="pesoFemale">50 Kg</string>
    <string name="gestacion">si</string>
    <string name="raceMale">Duroc</string>
    <string name="conformacionfisica">Conformación fisica del reproductor</string>
    <string name="menu_home">Inicio</string>
    <string name="error">¡Estas viendo un caballo en una aplicación de cerdos!, Debe haber un error, intentalo mas tarde.</string>
    <string name="app_correo">correo</string>
    <string name="searchEmployee">Cedula...</string>
    <string name="searchTool">Nombre...</string>
    <string name="change_password">Cambiar Contraseña</string>
    <string name="app_contraseña_new">Nueva Contraseña</string>
    <string name="app_contraseña_new_repite">Repitir Contraseña</string>
    <string name="idHeat">01</string>
    <string name="typeMating">Natural</string>
    <string name="sincrony">Si</string>
    <string name="dateStart">2019-05-04</string>
    <string name="dateEnd">2019-05-08</string>
    <string name="idMaleDad">01</string>
    <string name="idBirth">01</string>
    <string name="dateBirth">2019/05/04</string>
    <string name="numLechones">14</string>
    <string name="numMummy">2</string>
    <string name="numDead">0</string>
    <string name="idGestation">01</string>
    <string name="maleGestation">01</string>
    <string name="dateStartGestation">2019-05-04</string>
    <string name="date_format">dd/mm/yyyy</string>
    <string name="examDescription">Esta es una descripción del examen</string>
    <string name="formato_fecha">yyyy/mm/dd</string>
    <string name="formato_hora">hh:mm</string>
    <string name="default_notification_channel_id">Hola, bievenido</string>
    <string name="long_dummy_text">Notificación de ejemplo</string>
    <string name="exam_agresividad">Comportamiento del verraco con los trabajadores y con el resto de porcinos tanto hembras como machos.</string>
    <string name="exam_alimenticios">Inapetencia del verraco</string>
    <string name="exam_crianza">Análisis de comportamiento social del verraco.</string>
    <string name="exam_enfermedad">Inspección de enfermedades respiratorias, sarna, heces, dolor, o cojera.</string>
    <string name="exam_hormonal">Análisis de sangre para determinar si la hipófisis puede responder correctamente a la hormona liberadora de gonadotropina.</string>
    <string name="exam_genital">Análisis de alteraciones o defectos en el pene, analisis despues de hacer sedación con 12 azaperona (Stresnil).</string>
    <string name="exam_hereditarios">Análisis de problemas hereditarios, análisis de anormalidad en testículos.</string>
    <string name="exam_oseos">Detección de osteocondrosis o artritis</string>
    <string name="exam_parasitologico">Control de parásitos en los verracos</string>
    <string name="exam_pulmonar">Control de influencias, neumonía, rinitis previas.</string>
    <string name="exam_suministro">La falta de ellos puede causar una severa deshidratación en el verraco.</string>
</resources>
