<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    android:gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="350dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/logo_softpig" />

        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:text="@string/app_recuperar_contraseña"
            android:textAlignment="center"
            android:textSize="20dp">

        </TextView>

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_codigo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/app_codigo"
                    android:inputType="textPassword">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/app_contraseña"
                    android:inputType="textPassword">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <Button
            android:layout_width="350dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"
            android:background="@color/secondaryLightColor"
            android:onClick="btGenerar"
            android:text="@string/app_cambiarcontraseña">

        </Button>


        <LinearLayout
            android:id="@+id/ll_down"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/secondaryLightColor"
            android:gravity="bottom"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_down_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_dictionary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_diccionario_porcino">

                </TextView>

                <TextView
                    android:id="@+id/divider"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" | ">

                </TextView>

                <TextView
                    android:id="@+id/tv_about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_acercade">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_down_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/copyrigth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_derechos_reservados">

                </TextView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>