<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardview_article"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    cardview:cardBackgroundColor="#90E4E2E2"
    cardview:cardCornerRadius="@dimen/cornerradius_cardview"
    cardview:cardElevation="0dp"
    cardview:cardUseCompatPadding="true">

        <RelativeLayout
            android:padding="10dp"
            android:id="@+id/rl_cardview_tool"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_nameArticle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre_article"
                android:textColor="@android:color/black"
                android:textSize="@dimen/textSize_cardview"
                android:layout_marginBottom="5dp">
            </TextView>

            <TextView
                android:id="@+id/tv_idArticle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/idAriticle"
                android:layout_alignParentRight="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/textSize_cardview">

            </TextView>



            <TextView
                android:visibility="invisible"
                android:id="@+id/tv_typearticle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_article"
                android:textColor="@android:color/black"
                android:textSize="@dimen/textSize_cardview"
                android:layout_below="@id/tv_nameArticle"
                android:layout_marginBottom="5dp">
            </TextView>


                <TextView
                    android:id="@+id/tv_totalarticle"
                    android:layout_below="@id/tv_typearticle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/totalarticle"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/textSize_cardview">
                </TextView>s


                    <ImageView
                        android:layout_below="@id/tv_typearticle"
                        android:layout_alignParentRight="true"
                        android:id="@+id/iv_remove_article"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/delete">
                    </ImageView>

        </RelativeLayout>

</com.google.android.material.card.MaterialCardView>