<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    android:gravity="center">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="124dp"
            android:layout_weight="1"
            android:src="@drawable/porcino" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:onClick="btfertilidad"
                android:gravity="center"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:text="@string/app_empleado">
            </Button>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/app_empleado"
                android:src="@drawable/empleadomini">
            </ImageView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:onClick="btfertilidad"
                android:gravity="center"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:text="@string/app_articulo">
            </Button>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/app_empleado"
                android:src="@drawable/articulomini">
            </ImageView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:onClick="btfertilidad"
                android:gravity="center"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:text="@string/app_instalacion">
            </Button>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/app_empleado"
                android:src="@drawable/instalacionmini">
            </ImageView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:onClick="btfertilidad"
                android:gravity="center"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:text="@string/app_porcino">
            </Button>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/app_empleado"
                android:src="@drawable/porcinomini">
            </ImageView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:onClick="btfertilidad"
                android:gravity="center"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:text="@string/app_reporte">
            </Button>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/app_empleado"
                android:src="@drawable/reportemini">
            </ImageView>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>