<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardview_pig"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_cardview"
    android:layout_marginHorizontal="20dp"
    android:layout_marginTop="10dp"
    cardview:cardCornerRadius="@dimen/cornerradius_cardview"
    android:background="#53292929">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_cardview">
        <ImageView
            android:id="@+id/imagenPig"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_cardview"
            android:background="@drawable/lechon_modificado"
            android:scaleType="centerCrop">
        </ImageView>
    </RelativeLayout>
    <TextView
        android:id="@+id/tv_idPig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idPig"
        android:textColor="@android:color/white"
        android:textSize="@dimen/textSize_cardview"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp">
    </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:paddingLeft="@dimen/padding_cardview"
            android:paddingBottom="@dimen/padding_cardview">

            <TextView
                android:id="@+id/tv_etapaPig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/etapaPig"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textSize_cardview">
            </TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_pesoPig"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pesoPig"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textSize_cardview"
                    android:layout_weight="0.5"
                    android:paddingLeft="10dp"
                    android:background="@drawable/custom_button">
                </TextView>
                <TextView
                    android:id="@+id/tv_sexoPig"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sexoPig"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textSize_cardview"
                    android:layout_weight="0.5"
                    android:paddingLeft="150dp">

                </TextView>
            </LinearLayout>
        </LinearLayout>
</com.google.android.material.card.MaterialCardView>



