<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_male"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardview_male"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_cardview"
        cardview:cardBackgroundColor="#60E4E2E2"
        cardview:cardCornerRadius="@dimen/cornerradius_cardview"
        cardview:cardElevation="0dp"
        cardview:cardUseCompatPadding="true">


        <LinearLayout android:id="@+id/ll_cardview_male"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:paddingLeft="@dimen/padding_cardview"
            android:paddingBottom="@dimen/padding_cardview">

            <TextView
                android:id="@+id/tv_idMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/idPig"
                android:textColor="@android:color/black"
                android:textSize="20dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin">
            </TextView>

            <TextView
                android:id="@+id/tv_raceMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/raceMale"
                android:textColor="@android:color/black"
                android:textSize="@dimen/textSize_cardview">
            </TextView>

            <TextView
                android:id="@+id/tv_conformacionFisica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/conformacionfisica"
                android:textColor="@android:color/black"
                android:textSize="20dp">
            </TextView>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

        >

</LinearLayout>




